// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Space > applies correct align classes 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-start"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies correct direction classes 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies correct direction classes 2`] = `
<div
  class="sqi-space sqi-space-direction-vertical sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies correct spacing for different size values 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 8px; column-gap: 8px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies correct spacing for different size values 2`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies correct spacing for different size values 3`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 24px; column-gap: 24px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > applies wrap class when wrap is true 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center sqi-space-wrap"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > does not apply margin to last item 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > handles array size values for horizontal and vertical spacing 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center sqi-space-wrap"
  style="row-gap: 20px; column-gap: 10px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > handles numeric size values 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 30px; column-gap: 30px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > renders children correctly 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > renders with custom className 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center custom-class"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
</div>
`;

exports[`Space > renders with split element 1`] = `
<div
  class="sqi-space sqi-space-direction-horizontal sqi-space-align-center"
  style="row-gap: 16px; column-gap: 16px;"
>
  <div
    class="space-item"
  >
    <div>
      Item 1
    </div>
  </div>
  <span
    class="sqi-space-item-split"
  >
    |
  </span>
  <div
    class="space-item"
  >
    <div>
      Item 2
    </div>
  </div>
  <span
    class="sqi-space-item-split"
  >
    |
  </span>
  <div
    class="space-item"
  >
    <div>
      Item 3
    </div>
  </div>
</div>
`;
